finished! couple of bugs eg no zero after . if press operator before adding digit screen overflow on large multiples

--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,8 @@ button {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    justify-content: end;
+    justify-content: space-between;
+
     color: antiquewhite;
     background-color: rgb(36, 61, 61);
     padding-right: 10px;
